--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,23 +1,35 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
   release:
-      types: [published]
-      
+    types: [published]
+
 jobs:
-
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
 
-    - name: Build
-      run: go build -v ./...
+      - name: Build
+        run: |
+          GOOS=${{ matrix.os == 'windows-latest' && 'windows' || 'linux' }}
+          GOARCH=amd64
+          output=bin/dchook-${{ matrix.os == 'windows-latest' && 'windows' || 'linux' }}
+          [ "${{ matrix.os }}" = "windows-latest" ] && output="${output}.exe"
+          env GOOS=$GOOS GOARCH=$GOARCH go build -v -o $output ./...
+
+      - name: Upload release asset
+        uses: softprops/action-gh-release@v1
+        with:
+          files: bin/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
