--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,11 +21,16 @@ jobs:
 
       - name: Build
         run: |
-          GOOS=${{ matrix.os == 'windows-latest' && 'windows' || 'linux' }}
+          mkdir -p bin
+          if [ "${{ matrix.os }}" = "windows-latest" ]; then
+            GOOS=windows
+            OUTPUT=bin/dchook-windows.exe
+          else
+            GOOS=linux
+            OUTPUT=bin/dchook-linux
+          fi
           GOARCH=amd64
-          output=bin/dchook-${{ matrix.os == 'windows-latest' && 'windows' || 'linux' }}
-          [ "${{ matrix.os }}" = "windows-latest" ] && output="${output}.exe"
-          env GOOS=$GOOS GOARCH=$GOARCH go build -v -o $output ./...
+          env GOOS=$GOOS GOARCH=$GOARCH go build -v -o $OUTPUT ./cmd/dchook
 
       - name: Upload release asset
         uses: softprops/action-gh-release@v1
